Create sign in page basics & form controls

--- a/app/assets/css/sass/abstracts/_variables.scss
+++ b/app/assets/css/sass/abstracts/_variables.scss
@@ -1,3 +1,16 @@
 :root {
+  --background-main: #F3F4F6;
+  --background-light: #FFFFFF;
 
+  --primary-main: #00A0E3;
+
+  --neutral-maii: '';
+  --neutral-light: #D1D5DB;
+
+  --danger-main: #EB3333;
+
+  --text-main: #000000;
+  --text-light: #6B7A80;
+
+  --font-main: Inter, sans-serif;
 }
