--- a/app/assets/css/sass/style.scss
+++ b/app/assets/css/sass/style.scss
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
+@import 'global/global';
 
-//@import 'components/fonts';
-//@import 'components/global';
 
