Create icon button

--- a/app/assets/css/sass/abstracts/_variables.scss
+++ b/app/assets/css/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@
 
   --primary-main: #00A0E3;
 
-  --neutral-maii: '';
+  --neutral-main: '';
   --neutral-light: #D1D5DB;
 
   --danger-main: #EB3333;
