--- a/app/assets/css/sass/components/_form-controls.scss
+++ b/app/assets/css/sass/components/_form-controls.scss
@@ -12,14 +12,23 @@
   }
   &-root {
     position: relative;
+    border-radius: .4rem;
+    border: 1px solid var(--neutral-light);
+    display: flex;
+    align-items: center;
+    padding: 0 1.2rem;
+    &:focus-within {
+      outline: 1px solid black;
+    }
   }
   &-input {
     width: 100%;
     display: block;
-    border-radius: .4rem;
-    border: 1px solid var(--neutral-light);
-    padding: 1.6rem 1.2rem;
+    border: none;
+    padding: 1.6rem 0;
     font-size: 1.4rem;
+    border-radius: inherit;
+    outline: none;
     &::placeholder {
       color: var(--text-light);
     }
